--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
     "axios": "^1.1.3",
+    "date-fns": "^2.29.3",
     "firebase": "^9.13.0",
     "flowbite": "^1.5.3",
     "flowbite-react": "^0.3.2",
