--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
     "axios": "^1.1.3",
+    "daisyui": "^2.42.0",
     "date-fns": "^2.29.3",
     "firebase": "^9.13.0",
     "flowbite": "^1.5.3",
